@@ -35,7 +35,7 @@
   4dab2d86ca2203a8ac0233824c687504fda4601e 2013091000 mingw32-expat.xml
   bc4b331f9bdfbf72a11a310fbc17a027396d09d5 2012073100 mingw32-gcc-tools.xml
   9d1d9deeccee4fb04f2944e3cd5e7b85757308ce 2011050500 mingw32-gcc3.xml
-  0aed7cdb70d8e2a4f2550050f3d0a515c82903a7 2020030600 mingw32-gcc4.xml
+  4c5ae27472b624a2daaa8d89b1f7670027754357 2020071100 mingw32-gcc4.xml
   21031079d59268339bfd7c6dc8239df214588bca 2013091501 mingw32-gdb.xml
   14dd10ab97b27430bdb688f4e85993cd821f7a05 2012073100 mingw32-gendef.xml
   4646d328c5586fac8d11efa98334c0e4f9aac629 2018122800 mingw32-gettext.xml
@@ -51,7 +51,7 @@
   cd33ad74b608bce33ea297801253e6efbafce27c 2012073100 mingw32-mingw-utils.xml
   a3afe3d47e212a58f7d854d8badbc28db851aa34 2020030500 mingw32-mpc.xml
   21f6c9d72c41d551cb3c6310146c23414bd601c1 2020030500 mingw32-mpfr.xml
-  5c9570cce1ddd4fe275b83acbc06739a4361c26a 2020070801 mingw32-package-list.xml
+  5c9570cce1ddd4fe275b83acbc06739a4361c26a 2020071100 mingw32-package-list.xml
   0b8b7868e93c4fbaab57da8ca1fcb7700905fa92 2020013100 mingw32-pexports.xml
   cdb2a4dbedfc9f2cdfc92340f6f9b12da061c0d9 2012073100 mingw32-popt.xml
   6032af6ff68aa4821cf51938781fd9e75f05de5f 2016082200 mingw32-pthreads-w32.xml
