@@ -25,6 +25,7 @@
       <licence tarname="gcc-%-mingw32-lic.tar.*" />
 
       <component class="lic">
+        <release tarname="gcc-9.2.0-2-mingw32-lic.tar.xz" />
         <release tarname="gcc-9.2.0-1-mingw32-lic.tar.xz" />
         <release tarname="gcc-8.2.0-5-mingw32-lic.tar.xz" />
         <release tarname="gcc-8.2.0-4-mingw32-lic.tar.xz" />
@@ -47,6 +48,9 @@
         <requires eq="mingw32-libgcc-%-mingw32-dll-1.tar" />
         <requires eq="libatomic-%-mingw32-dll-1.tar" />
 
+        <release tarname="gcc-core-9.2.0-2-mingw32-bin.tar.xz">
+          <requires eq="mingw32-libisl-*-mingw32-dll-21.tar" />
+        </release>
         <release tarname="gcc-core-9.2.0-1-mingw32-bin.tar.xz">
           <requires eq="mingw32-libisl-*-mingw32-dll-21.tar" />
         </release>
@@ -101,6 +105,7 @@
       </component>
 
       <component class="man">
+        <release tarname="gcc-9.2.0-2-mingw32-man.tar.xz" />
         <release tarname="gcc-9.2.0-1-mingw32-man.tar.xz" />
         <release tarname="gcc-8.2.0-5-mingw32-man.tar.xz" />
         <release tarname="gcc-8.2.0-4-mingw32-man.tar.xz" />
@@ -111,6 +116,7 @@
       </component>
 
       <component class="info">
+        <release tarname="gcc-9.2.0-2-mingw32-info.tar.xz" />
         <release tarname="gcc-9.2.0-1-mingw32-info.tar.xz" />
         <release tarname="gcc-8.2.0-5-mingw32-info.tar.xz" />
         <release tarname="gcc-8.2.0-4-mingw32-info.tar.xz" />
@@ -121,6 +127,7 @@
       </component>
 
       <component class="lang">
+        <release tarname="gcc-9.2.0-2-mingw32-lang.tar.xz" />
         <release tarname="gcc-9.2.0-1-mingw32-lang.tar.xz" />
         <release tarname="gcc-8.2.0-5-mingw32-lang.tar.xz" />
         <release tarname="gcc-8.2.0-4-mingw32-lang.tar.xz" />
@@ -154,6 +161,7 @@
       <licence tarname="gcc-%-mingw32-lic.tar.*" />
 
       <component class="dll">
+        <release tarname="libgcc-9.2.0-2-mingw32-dll-1.tar.xz" />
         <release tarname="libgcc-9.2.0-1-mingw32-dll-1.tar.xz" />
         <release tarname="libgcc-8.2.0-5-mingw32-dll-1.tar.xz" />
         <release tarname="libgcc-8.2.0-4-mingw32-dll-1.tar.xz" />
@@ -186,6 +194,7 @@
         <requires le="gcc-ada-%-mingw32-dev.tar" />
         <requires eq="gcc-core-%-mingw32-bin.tar" />
 
+        <release tarname="gcc-ada-9.2.0-2-mingw32-bin.tar.xz" />
         <release tarname="gcc-ada-9.2.0-1-mingw32-bin.tar.xz" />
         <release tarname="gcc-ada-8.2.0-5-mingw32-bin.tar.xz" />
         <release tarname="gcc-ada-8.2.0-4-mingw32-bin.tar.xz" />
@@ -231,6 +240,7 @@
       <licence tarname="gcc-%-mingw32-lic.tar.*" />
 
       <component class="dll">
+        <release tarname="libgnat-9.2.0-2-mingw32-dll-9.tar.xz" />
         <release tarname="libgnat-9.2.0-1-mingw32-dll-9.tar.xz" />
         <release tarname="libgnat-8.2.0-5-mingw32-dll-6.tar.xz" />
         <release tarname="libgnat-8.2.0-4-mingw32-dll-6.tar.xz" />
@@ -263,6 +273,7 @@
         <requires eq="gcc-core-%-mingw32-bin.tar" />
         <requires eq="mingw32-libstdc++-%-mingw32-dll-6.tar" />
 
+        <release tarname="gcc-c++-9.2.0-2-mingw32-bin.tar.xz" />
         <release tarname="gcc-c++-9.2.0-1-mingw32-bin.tar.xz" />
         <release tarname="gcc-c++-8.2.0-5-mingw32-bin.tar.xz" />
         <release tarname="gcc-c++-8.2.0-4-mingw32-bin.tar.xz" />
@@ -303,6 +314,7 @@
       </component>
 
       <component class="man">
+        <release tarname="gcc-c++-9.2.0-2-mingw32-man.tar.xz" />
         <release tarname="gcc-c++-9.2.0-1-mingw32-man.tar.xz" />
         <release tarname="gcc-c++-8.2.0-5-mingw32-man.tar.xz" />
         <release tarname="gcc-c++-8.2.0-4-mingw32-man.tar.xz" />
@@ -333,6 +345,7 @@
       <licence tarname="gcc-%-mingw32-lic.tar.*" />
 
       <component class="dll">
+        <release tarname="libstdc++-9.2.0-2-mingw32-dll-6.tar.xz" />
         <release tarname="libstdc++-9.2.0-1-mingw32-dll-6.tar.xz" />
         <release tarname="libstdc++-8.2.0-5-mingw32-dll-6.tar.xz" />
         <release tarname="libstdc++-8.2.0-4-mingw32-dll-6.tar.xz" />
@@ -363,6 +376,9 @@
       <component class="bin">
         <affiliate group="Basic Setup" />
         <requires eq="gcc-core-%-mingw32-bin.tar" />
+        <release tarname="gcc-fortran-9.2.0-2-mingw32-bin.tar.xz">
+          <requires eq="libgfortran-%-mingw32-dll-5.tar" />
+        </release>
         <release tarname="gcc-fortran-9.2.0-1-mingw32-bin.tar.xz">
           <requires eq="libgfortran-%-mingw32-dll-5.tar" />
         </release>
@@ -417,6 +433,7 @@
       </component>
 
       <component class="info">
+        <release tarname="gcc-fortran-9.2.0-2-mingw32-info.tar.xz" />
         <release tarname="gcc-fortran-9.2.0-1-mingw32-info.tar.xz" />
         <release tarname="gcc-fortran-8.2.0-5-mingw32-info.tar.xz" />
         <release tarname="gcc-fortran-8.2.0-4-mingw32-info.tar.xz" />
@@ -427,6 +444,7 @@
       </component>
 
       <component class="man">
+        <release tarname="gcc-fortran-9.2.0-2-mingw32-man.tar.xz" />
         <release tarname="gcc-fortran-9.2.0-1-mingw32-man.tar.xz" />
         <release tarname="gcc-fortran-8.2.0-5-mingw32-man.tar.xz" />
         <release tarname="gcc-fortran-8.2.0-4-mingw32-man.tar.xz" />
@@ -460,6 +478,7 @@
         <requires eq="mingw32-libgcc-%-mingw32-dll-1.tar" />
         <requires eq="mingw32-libquadmath-%-mingw32-dll-0.tar" />
 
+        <release tarname="libgfortran-9.2.0-2-mingw32-dll-5.tar.xz" />
         <release tarname="libgfortran-9.2.0-1-mingw32-dll-5.tar.xz" />
         <release tarname="libgfortran-8.2.0-5-mingw32-dll-5.tar.xz" />
         <release tarname="libgfortran-8.2.0-4-mingw32-dll-5.tar.xz" />
@@ -517,6 +536,7 @@
         <requires eq="gcc-core-%-mingw32-bin.tar" />
         <requires eq="libobjc-%-mingw32-dll-4.tar" />
 
+        <release tarname="gcc-objc-9.2.0-2-mingw32-bin.tar.xz" />
         <release tarname="gcc-objc-9.2.0-1-mingw32-bin.tar.xz" />
         <release tarname="gcc-objc-8.2.0-5-mingw32-bin.tar.xz" />
         <release tarname="gcc-objc-8.2.0-4-mingw32-bin.tar.xz" />
@@ -564,6 +584,7 @@
       <component class="dll">
         <requires eq="mingw32-libgcc-%-mingw32-dll-1.tar" />
 
+        <release tarname="libobjc-9.2.0-2-mingw32-dll-4.tar.xz" />
         <release tarname="libobjc-9.2.0-1-mingw32-dll-4.tar.xz" />
         <release tarname="libobjc-8.2.0-5-mingw32-dll-4.tar.xz" />
         <release tarname="libobjc-8.2.0-4-mingw32-dll-4.tar.xz" />
@@ -589,6 +610,7 @@
       <licence tarname="gcc-%-mingw32-lic.tar.*" />
 
       <component class="dll">
+        <release tarname="libatomic-9.2.0-2-mingw32-dll-1.tar.xz" />
         <release tarname="libatomic-9.2.0-1-mingw32-dll-1.tar.xz" />
         <release tarname="libatomic-8.2.0-5-mingw32-dll-1.tar.xz" />
         <release tarname="libatomic-8.2.0-4-mingw32-dll-1.tar.xz" />
@@ -616,6 +638,7 @@
       <component class="dll">
         <requires eq="mingw32-libgcc-%-mingw32-dll-1.tar" />
 
+        <release tarname="libgomp-9.2.0-2-mingw32-dll-1.tar.xz" />
         <release tarname="libgomp-9.2.0-1-mingw32-dll-1.tar.xz" />
         <release tarname="libgomp-8.2.0-5-mingw32-dll-1.tar.xz" />
         <release tarname="libgomp-8.2.0-4-mingw32-dll-1.tar.xz" />
@@ -639,6 +662,7 @@
       <licence tarname="gcc-%-mingw32-lic.tar.*" />
 
       <component class="dll">
+        <release tarname="libssp-9.2.0-2-mingw32-dll-0.tar.xz" />
         <release tarname="libssp-9.2.0-1-mingw32-dll-0.tar.xz" />
         <release tarname="libssp-8.2.0-5-mingw32-dll-0.tar.xz" />
         <release tarname="libssp-8.2.0-4-mingw32-dll-0.tar.xz" />
@@ -658,6 +682,7 @@
       <component class="dll">
         <requires eq="mingw32-libgcc-%-mingw32-dll-1.tar"/>
 
+        <release tarname="libquadmath-9.2.0-2-mingw32-dll-0.tar.xz" />
         <release tarname="libquadmath-9.2.0-1-mingw32-dll-0.tar.xz" />
         <release tarname="libquadmath-8.2.0-5-mingw32-dll-0.tar.xz" />
         <release tarname="libquadmath-8.2.0-4-mingw32-dll-0.tar.xz" />
@@ -668,6 +693,7 @@
       </component>
 
       <component class="info">
+        <release tarname="libquadmath-9.2.0-2-mingw32-info.tar.xz" />
         <release tarname="libquadmath-9.2.0-1-mingw32-info.tar.xz" />
         <release tarname="libquadmath-8.2.0-5-mingw32-info.tar.xz" />
         <release tarname="libquadmath-8.2.0-4-mingw32-info.tar.xz" />
